--- a/index-axios.html
+++ b/index-axios.html
@@ -34,9 +34,8 @@
                         data: data,
                     })
                     .then((res) => {
-                        var jug = res.data;
                         console.log('res data', res.data);
-                        document.getElementById("textArea").innerHTML = jug.date;
+                        document.getElementById("textArea").innerHTML = res.data.date;
                     })
                     .catch((err) => {
                         throw err;
