--- a/index-axios.html
+++ b/index-axios.html
@@ -17,9 +17,10 @@
         Astronomy Bundle coordinates
     </h3>
     <form>
-        <input name="date" /><br />
+        <input type="date" name="date" /><br />
         <button type="submit">Submit</button>
     </form>
+
 
     <script type="text/javascript">
         window.addEventListener("load", () => {
