--- a/index-axios.html
+++ b/index-axios.html
@@ -82,7 +82,7 @@
     <p> distance: <span id="textArea3"></span></p>
 
     <h2>Prefer a link to the data in JSON format ? </h2>
-    <a href="http://localhost:3000/JSON/"> get it here !</href></a>
+    <a href="/JSON/"> get it here !</href></a>
 
 </body>
 
