--- a/index-axios.html
+++ b/index-axios.html
@@ -17,7 +17,6 @@
         $(function () {
             $('#datepicker').datepicker({
                 dateFormat: 'D M dd yy',
-
                 onSelect: function (datetext) {
                     var d = new Date(); // for now
                     datetext = datetext + " " + d.getHours() + ": " + d.getMinutes() + ": " + d
@@ -90,7 +89,12 @@
 
     <h2>Prefer a link to the data in JSON format ? </h2>
     <a href="/JSON/"> get it here !</href></a>
-
+<br>
+<br>
+<br>
+<p>
+    <h6><a href="https://github.com/andrmoel/astronomy-bundle-js"> Astronomy Bundle on Github</href></a></h6>
+</p>
 </body>
 
 </html>
