--- a/index-axios.html
+++ b/index-axios.html
@@ -23,8 +23,10 @@
                         .getSeconds();
                     $('#datepicker').val(datetext);
                 },
+                
             });
         });
+
     </script>
 
     <title>Document</title>
@@ -34,7 +36,7 @@
     <h3 style="color: green; font-size: 25px;">
         API based on the Astronomy Bundle Package
     </h3>
-    <p>Enter the Time Of Interest, for which you want to compute corrdinates.</p>
+    <p>Enter the Time Of Interest, for which you want to compute coordinates.</p>
     <form>
         <input type="text" name="date" id="datepicker" required>
         <button type="submit">Submit</button>
@@ -46,15 +48,12 @@
             form.addEventListener("submit", (e) => {
                 e.preventDefault();
                 let data = new FormData(form);
-                console.log(data);
                 axios({
                         method: "post",
                         url: "/",
                         data: data,
                     })
                     .then((res) => {
-                        //console.log('res data', res.data);
-                        //console.log('res.data.earth.lon', res.data.earth.lon);
                         document.getElementById("textArea1").innerHTML = res.data.earth.lon;
                         document.getElementById("textArea2").innerHTML = res.data.earth.lat;
                         document.getElementById("textArea3").innerHTML = res.data.earth.radiusVector;
@@ -69,13 +68,6 @@
         });
     </script>
 
-    <script type="text/javascript">
-        _today: function () {
-            var myDate = document.querySelector(myDate);
-            var today = new Date();
-            myDate.value = today.toISOString().substr(0, 15);
-        }
-    </script>
 
     <h2>Heliocentric coordinates of Earth</h2>
     <p> longitude: <span id="textArea1"></span>&deg;</p>
