--- a/index-axios.html
+++ b/index-axios.html
@@ -29,7 +29,7 @@
 
     </script>
 
-    <title>Document</title>
+    <title>Astronomical Coordinates in the Solar System</title>
 </head>
 
 <body>
@@ -87,6 +87,7 @@
 <p>
     <h6><a href="https://github.com/andrmoel/astronomy-bundle-js"> Astronomy Bundle on Github</href></a></h6>
 </p>
+
 </body>
 
 </html>
