--- a/index-axios.html
+++ b/index-axios.html
@@ -85,10 +85,6 @@
     </script>
 <br>
 <br>
-    <h2>Heliocentric coordinates of Earth</h2>
-    <p> longitude: <span id="textArea1"></span>&deg;</p>
-    <p> latitude: <span id="textArea2"></span>&deg;</p>
-    <p> distance (astronomical units): <span id="textArea3"></span></p>
 
     <h2>Heliocentric coordinates of Earth</h2>
     <p> longitude: <span id="textArea1"></span>&deg;</p>
@@ -99,7 +95,6 @@
     <p> longitude: <span id="textArea4"></span>&deg;</p>
     <p> latitude: <span id="textArea5"></span>&deg;</p>
     <p> distance (astronomical units): <span id="textArea6"></span></p>
-
 
     <h2>Geocentric coordinates of Venus</h2>
     <p> longitude: <span id="textArea1g"></span>&deg;</p>
@@ -119,17 +114,14 @@
     <p> distance in km: <span id="textArea6md"></span></p>
 
 
-    <h2>Prefer a link to the data in JSON format ? </h2>
-    <a href="/JSON/"> get it here !</href></a>
+    <h2>Prefer a link to the data in JSON format ?
+        <br>
+    <a href="/JSON/"> == Get it here ! ==</href></a> </h2>
     <br>
-    <br>
-    <br>
+
     <p>
         <h6><a href="https://github.com/andrmoel/astronomy-bundle-js"> Astronomy Bundle on Github</href></a></h6>
     </p>
-
-
-
 
 </body>
 
