--- a/index-axios.html
+++ b/index-axios.html
@@ -118,7 +118,8 @@
 
     <h2>Prefer a link to the data in JSON format ?
         <br>
-    <a href="/JSON/"> == Get it here ! ==</href></a> </h2>
+        <a href="/JSONData"> == Get it here ! ==</a>
+    </h2>
     <br>
 
     <p>
