--- a/libre-monitor.html
+++ b/libre-monitor.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LibreMonitor</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -34,6 +35,6 @@
             </div>
         </div>
     </div>
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 </html>
